--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "moment": "^2.29.1",
+    "qqmap": "^1.0.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.5.2",
     "vue-class-component": "^7.2.3",
+    "vue-jsonp": "^2.0.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
