--- a/package.json
+++ b/package.json
@@ -83,5 +83,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "proxy": {
+    "/": "https://xyh.iterator-traits.com/api/v1/"
+  }
 }
